# STM32-ESP32-IoT-Monitor-and-Control

./: .gitignore  README.md
ESP32_Cloud_Gateway/: CMakeLists.txt  sdkconfig
ESP32_Cloud_Gateway/components/mqtt/: CMakeLists.txt  cloud_mqtt_task.c  mqtt_driver.c
ESP32_Cloud_Gateway/components/mqtt/certs/: End_point.txt  Public_key.pem.key  certificate.pem.crt  private.pem.key
ESP32_Cloud_Gateway/components/mqtt/include/: mqtt.h
ESP32_Cloud_Gateway/components/uart/: CMakeLists.txt  uart2_driver.c  uart_rxtx_task.c
ESP32_Cloud_Gateway/components/uart/include/: uart.h
ESP32_Cloud_Gateway/components/wifi/: CMakeLists.txt  wifi_driver.c  wifi_manager_task.c
ESP32_Cloud_Gateway/main/: main.c
ESP32_Cloud_Gateway/main/include/: task_priorities.h
STM32_Sensor_Node/: Makefile  STM32F446RETX_FLASH.ld  STM32F446RETX_RAM.ld
STM32_Sensor_Node/FreeRTOS/: FreeRTOSConfig.h
STM32_Sensor_Node/Inc/: shared_resources.h  uart.h
STM32_Sensor_Node/Inc/core/: devices.h  rooms.h  sensors.h  wrapper.h
STM32_Sensor_Node/Inc/tasks/: tasks.h
STM32_Sensor_Node/Src/: main.c  uart.c
STM32_Sensor_Node/Src/core/: devices.cpp  rooms.cpp  sensors.cpp  wrapper.cpp
STM32_Sensor_Node/Src/tasks/: task_controller.c  task_logger.c  task_sensor_read.c  task_sensor_write.c  task_transmit.c
STM32_Sensor_Node/Startup/: startup_stm32f446retx.s
iot-aws-terraform/: main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup
main/: CMakeLists.txt  cloud.c  control_task.c  control_task.h  main.c  priorities.h  uart.c  uart.h  wifi.c  wifi.h
main/certs/Temp/: Public_key.key
(+1 files in other folders)
